--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.25.0",
-    "gh-pages": "^3.2.3",
     "modern-normalize": "^1.1.0",
+    "netlify-cli": "^9.6.2",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.1.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -27,7 +29,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
+    "deploy": "netlify deploy -p",
     "predeploy": "npm run build",
     "prepare": "husky install"
   },
@@ -39,7 +41,6 @@
   "bugs": {
     "url": "https://github.com/nelli-belovol/test-work-react/issues"
   },
-  "homepage": "https://nelli-belovol.github.io/test-work-react",
   "eslintConfig": {
     "extends": [
       "react-app",
